@@ -62,10 +62,10 @@ public final class EnglishLanguageIndicatorPluginTest {
     @Test
     public void calculatedIndicatorTest() {
         assertEquals(plugin.evaluate(tender4).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender4).getValue(), new Double(0d));
+        assertEquals(plugin.evaluate(tender4).getValue(), Double.valueOf(0d));
 
         assertEquals(plugin.evaluate(tender5).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender5).getValue(), new Double(100d));
+        assertEquals(plugin.evaluate(tender5).getValue(), Double.valueOf(100d));
     }
 
 }
