@@ -62,19 +62,19 @@ public final class ProcedureTypeIndicatorPluginTest {
     @Test
     public void calculatedIndicatorTest() {
         assertEquals(plugin.evaluate(tender1).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender1).getValue(), new Double(0d));
+        assertEquals(plugin.evaluate(tender1).getValue(), Double.valueOf(0d));
 
         assertEquals(plugin.evaluate(tender2).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender2).getValue(), new Double(100d));
+        assertEquals(plugin.evaluate(tender2).getValue(), Double.valueOf(100d));
 
         assertEquals(plugin.evaluate(tender3).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender3).getValue(), new Double(100d));
+        assertEquals(plugin.evaluate(tender3).getValue(), Double.valueOf(100d));
 
         assertEquals(plugin.evaluate(tender4).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender4).getValue(), new Double(0d));
+        assertEquals(plugin.evaluate(tender4).getValue(), Double.valueOf(0d));
 
         assertEquals(plugin.evaluate(tender5).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender5).getValue(), new Double(0d));
+        assertEquals(plugin.evaluate(tender5).getValue(), Double.valueOf(0d));
     }
 
 }
